refactor: clean code improvements across backend
- TagMapper: extract applyFields() to eliminate 11-line DRY violation
  between updateJpaEntity() and toNewJpaEntity()
- AuthCommandService: extract issueTokenPair() and newExpiresAt() to
  remove duplicate token generation logic; add INVALID_CREDENTIALS_MSG
  constant for repeated error string
- MemberTagInitializerService: extract ROOT_TAG_NAME / DISCARDED_TAG_NAME
  constants to replace magic string literals
- TagCommandService: translate Korean comments to English
- RecordApiController, TagMapper: replace Collectors.toList() with
  Stream.toList() (Java 16+); remove unused Collectors import
- TagApiController: add missing @Valid on StartTimerRequest

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>